# distributedsystem

./: CMakeLists.txt  docker-compose.yml
Database/: Database.cpp  Database.h  Dockerfile  Http.h
Server/: Dockerfile  Makefile  Server.cpp  Server.h
Server/gen-cpp/: RPCTasks_server.skeleton.cpp  RPCTasks_types.cpp  RPCTasks_types.h
Worker/: Dockerfile  Http.h  Makefile  RPCImp.h  Worker.cpp  Worker.h
Worker/gen-cpp/: RPCTasks.cpp  RPCTasks.h
